--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/butler
-main.datasource.username = sa
-main.datasource.password =
+main.datasource.url = jdbc:postgresql://192.168.1.115:5432/butler
+main.datasource.username = emerald1
+main.datasource.password = emerald1
 
 main.liquibase.change-log=org/emerald/butler/liquibase/changelog.xml
 
