--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,7 @@ dependencies {
 
     implementation 'io.jmix.core:jmix-core-starter'
     implementation 'io.jmix.data:jmix-eclipselink-starter'
-    runtimeOnly 'org.hsqldb:hsqldb'
-
+   
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'io.jmix.ui:jmix-ui-starter'
     implementation 'io.jmix.ui:jmix-ui-data-starter'
@@ -51,6 +50,8 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'io.jmix.ui:jmix-ui-test-assist'
+
+    implementation 'org.postgresql:postgresql'
 }
 
 test {
