--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-main.datasource.url = jdbc:postgresql://192.168.1.114:5432/butler
+main.datasource.url = jdbc:postgresql://localhost:5432/butler
 main.datasource.username = emerald1
 main.datasource.password = emerald1
 
